# KhemKernel

./: .gitignore  README.md  preprocess.py  pyproject.toml  requirements-ml.txt  requirements.txt
.github/workflows/: deploy.yml
demo/: README.md  server.py
demo/static/: index.html  writeup.html
demo/web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
experiments/: __init__.py  beam_ceiling.py  failure_taxonomy.py  faithfulness.py  probing.py  scaling.py  stereo_breakdown.py
media/manim/: .gitignore  README.md  scenes.py
picochem/: __init__.py  attention.py  backend.py  bpe.py  checkpointing.py  data.py  data_loader.py  decoder.py  device_layers.py  embeddings.py  encoder.py  evaluate.py  faithfulness.py  ffn.py  logging_utils.py  model.py  ops.py  optimizer.py  probes.py  scheduler.py  traces.py  train.py
picochem-site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
picochem-site/src/: content.config.ts
picochem/kernels/: Makefile  ROADMAP.md  (+1 more)
scripts/: benchmark_kernels.py  build_bpe.py  build_cuda.sh  build_vocab.py  download_data.py  evaluate.py  generate_traces.py  resume_training.py  run_retrain.sh  sample_during_training.py  sanity_check_model.py  setup_env.sh  train.py  train_device.py
tests/: overfit_test.py  test_attention.py  test_backend_parity.py  test_checkpointing.py  test_cuda_bindings.py  test_data_loader.py  test_decoder.py  test_device_layers.py  test_embeddings.py  test_encoder.py  test_evaluate.py  test_generations.py  test_model.py  test_ops.py  test_scheduler.py
(+115 files in other folders)
