[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "picochem"
version = "0.1.0"
description = "Encoder-decoder transformer for SMILES ↔ IUPAC translation, built from scratch in NumPy."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "datasets",
    "rdkit",
    "tqdm",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["picochem*"]
